--- a/build.xml
+++ b/build.xml
@@ -1,48 +1,74 @@
-<project name="helloworld" default="war">
-	<property name="src" location="src/java" />
-	<property name="libcompile" location="lib/compile" />
-	<property name="libruntime" location="lib/runtime" />
-	<property name="web" location="web" />
-	<property name="webxml" location="${web}/WEB-INF/web.xml" />
-	<property name="build" location="build" />
-	<property name="classes" location="${build}/classes" />
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- WARNING: Eclipse auto-generated file.
+              Any modifications will be overwritten.
+              To include a user specific buildfile here, simply create one in the same
+              directory with the processing instruction <?eclipse.ant.import?>
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="Hello World">
+    <property environment="env"/>
+    <property name="ECLIPSE_HOME" value="../../../../../sts-4.9.0.RELEASE/"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="13"/>
+    <property name="source" value="13"/>
+            	<property name="src" location="src/java" />
+            	<property name="libcompile" location="lib/compile" />
+            	<property name="libruntime" location="lib/runtime" />
+            	<property name="web" location="web" />
+            	<property name="webxml" location="${web}/WEB-INF/web.xml" />
+            	<property name="build" location="build" />
+            	<property name="classes" location="${build}/classes" />
 
-	<property name="version" value="0.1-dev" />
-	<property name="source" value="1.7" />
-	<property name="target" value="1.7" />
-
-	<path id="classpath">
-		<fileset dir="${libcompile}">
-			<include name="*.jar" />
-		</fileset>
-		<fileset dir="${libruntime}">
-			<include name="*.jar" />
-		</fileset>
-	</path>
-
-	<target name="clean">
-		<delete dir="${build}" />
-	</target>
-
-	<target name="init" depends="clean">
-		<mkdir dir="${build}" />
-		<mkdir dir="${classes}" />
-	</target>
-
-	<target name="compile" depends="init">
-		<javac includeantruntime="false" 
-		srcdir="${src}" destdir="${classes}" source="${source}" target="${target}">
-			<classpath refid="classpath" />
-		</javac>
-	</target>
-
-	<target name="war" depends="compile">
-		<war destfile="${build}/${ant.project.name}-${version}.war"
-			webxml="${webxml}">
-			<fileset dir="${web}" />
-			<lib dir="${libruntime}" />
-			<classes dir="${classes}" />
-		</war>
-	</target>
-
+            	<property name="version" value="0.1-dev" />
+            	<property name="source" value="1.7" />
+            	<property name="target" value="1.7" />          	
+              	<path id="classpath">
+              			<fileset dir="${libcompile}">
+              				<include name="*.jar" />
+              			</fileset>
+              			<fileset dir="${libruntime}">
+              				<include name="*.jar" />
+              			</fileset>
+              		</path>
+    <path id="Web App Libraries.libraryclasspath"/>
+    <path id="EAR Libraries.libraryclasspath"/>
+    <path id="Hello World.classpath">
+        <pathelement location="build/classes"/>
+        <path refid="Apache Tomcat v9.0 [Apache Tomcat v9.0].libraryclasspath"/>
+        <path refid="Web App Libraries.libraryclasspath"/>
+        <path refid="EAR Libraries.libraryclasspath"/>
+    </path>
+    <target name="init">
+        <mkdir dir="build/classes"/>
+        <copy includeemptydirs="false" todir="build/classes">
+            <fileset dir="src">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
+    </target>
+    <target name="clean">
+        <delete dir="build/classes"/>
+    </target>
+    <target depends="clean" name="cleanall"/>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects"/>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="Hello World.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
 </project>
